fix reply button width on small screen

--- a/src/app/main/component/comments/components/add-comment/add-comment.component.scss
+++ b/src/app/main/component/comments/components/add-comment/add-comment.component.scss
@@ -128,4 +128,13 @@
       }
     }
   }
+
+  .wrapper-reply {
+    .input-submit {
+      button {
+        width: 100%;
+        margin: 0;
+      }
+    }
+  }
 }
